changing report name

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -21,7 +21,7 @@ REMOTE_URL = localhost
 REMOTE_PORT = 4444
 # Report information
 PROJECT_NAME = Automation Framework Cucumber TestNG | Anh Tester
-REPORT_TITLE = Report | Automation Framework Cucumber TestNG | Anh Tester
+REPORT_TITLE = Report | SLAS Portal | APIs Automation
 #EXTENT_REPORT_NAME = ExtentReport
 #EXTENT_REPORT_FOLDER = reports/CucumberExtentReports
 EXTENT_REPORT_NAME = Spark
