--- a/.github/workflows/maven-docker.yml
+++ b/.github/workflows/maven-docker.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - dockertest
   workflow_dispatch:
- schedule:
+  schedule:
     - cron: '30 * * * *'  # Run at the 30th minute of every hour
 
 jobs:
@@ -14,12 +14,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-         java-version: '17'
-         distribution: 'temurin'
-         cache: maven
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
@@ -27,6 +28,8 @@ jobs:
       - name: Build and start Docker Compose services
         run: |
           docker-compose -f docker-compose-hubNode.yml up -d
+          sleep 20  # Adjust the sleep duration as needed
+
       - name: Wait for services to start
         run: sleep 10
 
@@ -34,10 +37,9 @@ jobs:
         run: mvn test
 
       - name: Stop Docker Compose services
-        run: |
-          docker-compose -f docker-compose-hubNode.yml down
+        run: docker-compose -f docker-compose-hubNode.yml down
 
       - uses: actions/upload-artifact@v4
         with:
-         name: SparkReport
-         path: ExtentReports/**/Reports/
+          name: SparkReport
+          path: ExtentReports/**/Reports/
