--- a/.github/workflows/maven-docker.yml
+++ b/.github/workflows/maven-docker.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - dockertest
   workflow_dispatch:
-  schedule:
-    - cron: '30 * * * *'  # Run at the 30th minute of every hour
 
 jobs:
   build:
@@ -14,13 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+         java-version: '17'
+         distribution: 'temurin'
+         cache: maven
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
@@ -28,8 +25,6 @@ jobs:
       - name: Build and start Docker Compose services
         run: |
           docker-compose -f docker-compose-hubNode.yml up -d
-          sleep 20  # Adjust the sleep duration as needed
-
       - name: Wait for services to start
         run: sleep 10
 
@@ -37,9 +32,10 @@ jobs:
         run: mvn test
 
       - name: Stop Docker Compose services
-        run: docker-compose -f docker-compose-hubNode.yml down
+        run: |
+          docker-compose -f docker-compose-hubNode.yml down
 
       - uses: actions/upload-artifact@v4
         with:
-          name: SparkReport
-          path: ExtentReports/**/Reports/
+         name: SparkReport
+         path: ExtentReports/**/Reports/
